<resources>
    <string name="app_name">Food App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_food_list">FoodList</string>
    <string name="menu_food_detail">FoodDetail</string>
    <string name="menu_cart">CartFood</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="menu_sign_out">Sign out</string>
</resources>