<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_menu" />
    </group>

    <group android:id="@+id/food_group">
        <item
            android:id="@+id/nav_foodList"
            android:icon="@drawable/ic_shopping_list"
            android:title="@string/menu_food_list" />
    </group>
    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sign_out" />
    </group>
</menu>