<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.obeidareda37.foodapp.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.obeidareda37.foodapp.activities.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.obeidareda37.foodapp.activities.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/food_list_fragment" />
    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.obeidareda37.foodapp.activities.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.obeidareda37.foodapp.activities.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/cart_fragment" />
</navigation>